--- a/docs/vector_permutation.adoc
+++ b/docs/vector_permutation.adoc
@@ -13,7 +13,7 @@ TODO
 [width="100%",cols="11%,11%,16%,62%",options="header",]
 |===
 |*Revision* |*Date*      |*Author*  |*Summary of Changes*
-|0.1        | 2025.04.TODO | Sai Govardhan | Initial Vector Permutations Desig Document
+|0.1        | 2025.04.TODO | Sai Govardhan | Initial Vector Permutations Design Document
 |===
 
 [[Conventions_and_Terminology]]
@@ -24,7 +24,7 @@ TODO
 |===
 |Label |Description
 | VLSU | Vector Load Store Unit
-| |
+| VLEN | 
 |===
 
 [[Related_Documents]]
@@ -51,9 +51,71 @@ TODO
 
 [[OVERVIEW]]
 == OVERVIEW
+The following is the directory structure of olympia, for reference:
+
+```bash
+.
+├── arches              
+├── CMakeLists.txt
+├── CodingStyle.md
+├── conda
+├── CONTRIBUTING.md
+├── CONTRIBUTORS.md
+├── core                ## Consists of the vector/ directory
+├── docs
+├── fsl
+├── layouts
+├── LICENSE
+├── mavis
+├── mss
+├── README.md
+├── release
+├── reports
+├── sim
+├── stf_lib
+├── test
+├── test.json
+└── traces
+```
+
+=== Configuring the Vector Unit 
+
+Olympia implements the Vector Unit in the `core/vector/` directory where:
+
+ - `VLEN` is the width of the vector register statically set to 1024
+
+ - `ELEN`, the Maximum Vector Element Width is specified based on `sew_` (Set Element Width)
+
+Within the `core/vector/VectorConfig.hpp` file, the `VectorConfig` class is defined to configure the Vector Unit.
+
+```
+VectorConfig(uint32_t vl, uint32_t sew, uint32_t lmul, uint32_t vta)
+```
+
+A sample assembly instruction is:
+
+```
+vsetvli t0, a0, e32, m1   # Configure vector unit where a0 specifies the vector length (vl_), sew_=32, lmul_=1
+
+```
+Note that the Vector register group multiplier setting is specified by `lmul_` and is set to 1 by default. 
+
+The `vlmax_`, the maximum vector length is set to `((VLEN / sew_) * lmul_)`.
+
+We would be using a subset of `vlmax_` by specifying the `vl_` in the vector configuration.
+
+Take an example where VLEN is set to 1024, `sew_` is 32 bits and `lmul_` is 1. Then `vlmax_` is ((1024/32)*1) = 32. Which means that there is one logical Vector register is divided into 32 elements of 32 bits each.
+
+If we set Vector Length (that we would use) `vl_` to 16, then we are using 16 elements of 32 `vlmax_` elements we could use in the logical vector register file instance.
+
+Note that the `vta_` (Vector Tail Agnostic) parameter is set to false by default, which indicates that it is undisturbed. 
+
 
 // <Overview of the unit, what does it do, where does it fit into Olympia
 // proper, use the section below to discuss the context>
+
+=== How are the Vector uops generated?
+
 
 
 [[Overview_Block_Diagram]]
