--- a/docs/vector_permutation.adoc
+++ b/docs/vector_permutation.adoc
@@ -111,8 +111,6 @@ vsetvli t0, a0, e32, m1   # Configure vector unit where a0 specifies the vector
 length (vl_), sew_=32, lmul_=1
 
 ```
-Note that the Vector register group multiplier setting is specified by `lmul_` 
-and is set to 1 by default. 
 
 The `vlmax_`, the maximum vector length is set to `((VLEN / sew_) * lmul_)`.
 
@@ -137,16 +135,20 @@ default, which indicates that it is undisturbed.
 === How are the Vector Uops generated?
 
 We decode and determine the instructions as Vector instructions in the 
-`core/decode/Decode.cpp` file using Mavis as specified in the 
+`core/decode/Decode.cpp` file.
+
+```cpp
+vector_enabled_(true),
+        vector_config_(new VectorConfig(p->init_vl, p->init_sew, p->init_lmul, p->init_vta)),
+```
+
+We feed Mavis with the Vector Permutation instructions in json format as specified in the 
 `mavis/json/isa_rv64v.json` and the `mavis/json/isa_rv64vf.json` files for both
 the Base Vector instructions and the Vector Floating Point instructions.
 
 The `core/vector/VectorUopGenerator.hpp` file implements the Vector Uop 
 Generator. 
 
-Note that we currently hardcode the `lmul_` parameter to 1 in the above
-configuration, which implies that each vector instruction currently generates 
-only one micro-operation. 
 
 ### Adding Support to Vector Permutation instructions
 
@@ -162,6 +164,7 @@ only one micro-operation.
             ... `SLIDEDOWN`
             ... `RGATHER`
             ... `COMPRESS` 
+            ... `WHOLE_REG_MOVE`
         
     . `mavis/json/isa_rv64v.json`:
         .. Define vector permutation instruction encodings
@@ -201,16 +204,22 @@ The files we shall be modifying:
 
 ##### Vector Scalar Move Instructions
 
+Integer Scalar Move
+
     . vmv.x.s rd, vs2    # x[rd] = vs2[0]
     . vmv.s.x vd, rs1    # vd[0] = x[rs1]
+
+Floating-Point Scalar Move
+
+    . vfmv.f.s rd, vs2 # f[rd] = vs2[0] (rs1=0)
+    . vfmv.s.f vd, rs1 # vd[0] = f[rs1] (vs2=0)
+
 
 Key points:
 
     - Ignores LMUL and vector register groups
     - Operates even if vstart ≥ vl or vl=0
     - Handles SEW vs XLEN width differences
-
-// - TODO MORE
 
 
 ##### Vector Slide Instructions
@@ -247,6 +256,15 @@ Requirements:
     . vcompress.vm      # Pack masked elements contiguously
 
 [[Overview_Block_Diagram]]
+
+##### Whole Vector Register Move
+
+    . vmv1r.v v1, v2        # Copy v1=v2
+    . vmv2r.v v10, v12      # Copy v10=v12; v11=v13
+    . vmv4r.v v4, v8        # Copy v4=v8; v5=v9; v6=v10; v7=v11
+    . vmv8r.v v0, v8        # Copy v0=v8; v1=v9; ...; v7=v15
+
+
 === Overview Block Diagram
 
 // <Add an overview block diagram>
@@ -261,45 +279,37 @@ Requirements:
 
 === Taking an example of implementing the vector move instructions
 
-    . vmv.x.s rd, vs2    # x[rd] = vs2[0]
+. vmv.x.s rd, vs2    # x[rd] = vs2[0]
 
-    1. We add the instruction in `mavis/json/isa_rv64v.json` file
+.. We add the instruction in `mavis/json/isa_rv64v.json` file
 
-    2. Add the instruction to `core/InstArchInfo.hpp` file
+.. Add the instruction to `core/InstArchInfo.hpp` file
 
-    ```cpp
+```cpp
         enum class UopGenType
         {
             ...
             SCALAR_MOVE
             ...
         }
-    ```
+```
 
-    3. Add a new function for SCALAR_MOVE and declare it in the header.
+.. Add a new function for SCALAR_MOVE and declare it in the header.
 
-    ```cpp
+```cpp
         InstPtr generateScalarMoveUops_();
-    ```
+```
 
-    4. Add the new function in the `core/vector/VectorUopGenerator.cpp` file.
+.. Add the new function in the `core/vector/VectorUopGenerator.cpp` file.
 
-    ```cpp
-        InstPtr generateScalarMoveUops_();
-    ```
-
-    5. Add the new function in the `core/vector/VectorUopGenerator.cpp` file.
-
-    ```cpp
+```cpp
 
     InstPtr VectorUopGenerator::generateScalarMoveUops_()
     {
-
-        // TODO implementation
     }
-    ```
+```
 
-    6. Add the tests to the `test/core/vector/Vector_test.cpp` file.
+5. Add the tests to the `test/core/vector/Vector_test.cpp` file.
     
 [[Unit_Block_Diagram]]
 === Unit Block Diagram
@@ -307,11 +317,12 @@ Requirements:
 // <Add an overview block diagram>
 // image:media/image1.png[image,width=576,height=366]
 // Figure 1 - Sample Figure
-. TODO
+1. Vector Scalar Move Instruction
 
 
 [[Block_Diagram_Description]]
 === Block Diagram Description
+
 
 // <walk through the block diagram>
 
@@ -325,7 +336,13 @@ Requirements:
 === Operation
 
 // <describe the low-level operation of the block>
-. TODO
+
+1. Vector Scalar Move Instruction
+
+. `vmv.x.s rd, vs2 # x[rd] = vs2[0] (vs1=0)`
+- Performs its operation even if vstart ≥ vl or vl=0.
+- If SEW > XLEN, the least-signi cant XLEN bits are transferred and the upper SEW-XLEN bits are ignored. 
+- If SEW < XLEN, the value is sign-extended to XLEN bits
 
 [[Interfaces]]
 === Interfaces
